# browser-use

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
browser_use_package/: __init__.py  agent.py  browser.py  cli.py
documentation/: README.md
examples/: agent_browsing.ipynb  simple_example.py
examples/0_notebooks/: agent_browsing.ipynb
