[project]
name = "browser-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio<4",
    "google>=3.0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.1",
    "langchain-groq>=0.3.1",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-postgres>=2.0.19",
    "lxml>=5.3.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "click>=8.0.0",
    "playwright>=1.51.0",
]

[project.scripts]
browser-use = "browser_use.cli:cli"

[tool.setuptools]
packages = ["browser_use"]
